force-app/main/default/objects/Case/fields/Age_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_In_Days__c</fullName>
    <formula>IF(!ISPICKVAL(Status,&quot;Closed&quot;),TODAY() -  DATEVALUE(CreatedDate),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>