force-app/main/default/objects/Case/fields/Agent_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Agent_Remarks__c</fullName>
    <label>Agent Remarks</label>
    <type>TextArea</type>
</CustomField>