force-app/main/default/objects/Case/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <formula>Contact.Application_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Number</label>
    <type>Text</type>
</CustomField>