force-app/main/default/objects/Case/fields/Approved_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Agent</label>
    <type>Checkbox</type>
</CustomField>