force-app/main/default/objects/Case/fields/Case_Ageee__c.field-meta.xml
<CustomField>
    <fullName>Case_Ageee__c</fullName>
    <formula>IF(
    ISPICKVAL(Status, &quot;Closed&quot;),
    0,
    CASE(
        TEXT(Status),
        &quot;New&quot;, ROUND((NOW() - CreatedDate) * 24 * 60, 0),
        &quot;Completed&quot;, ROUND((NOW() - CreatedDate) * 24 * 60, 0),
        &quot;Escalated&quot;, ROUND((NOW() - CreatedDate) * 24 * 60, 0),
        &quot;In Progress&quot;, ROUND((NOW() - CreatedDate) * 24 * 60, 0),
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Ageee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>