force-app/main/default/objects/Case/fields/Case_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Student_Contact_For_Updates__r.FirstName)) &amp;&amp; NOT(ISBLANK(Student_Contact_For_Updates__r.LastName)),
    Student_Contact_For_Updates__r.FirstName &amp; &quot; &quot; &amp; Student_Contact_For_Updates__r.LastName,
    Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Contact Name</label>
    <type>Text</type>
</CustomField>