force-app/main/default/objects/Case/fields/Case_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration__c</fullName>
    <label>Case Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>