force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Program related</fullName>
            </value>
            <value>
                <fullName>Academic Related</fullName>
            </value>
            <value>
                <fullName>IT Related</fullName>
            </value>
            <value>
                <fullName>Exam Related</fullName>
            </value>
            <value>
                <fullName>Connect with CoE Office</fullName>
            </value>
            <value>
                <fullName>Connect with Office of Registrar</fullName>
            </value>
            <value>
                <fullName>Connect with Alumni Office</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Maintainance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>HouseKeeping</fullName>
            </value>
            <value>
                <fullName>Mess</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Health Center</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
                <isActive>false</isActive>
                <label>Food</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>