force-app/main/default/objects/Case/fields/Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Number__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Student_Contact_For_Updates__r.MobilePhone)),
    Student_Contact_For_Updates__r.MobilePhone,
    Contact.MobilePhone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile Number</label>
    <type>Text</type>
</CustomField>