force-app/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact.FirstName &amp;&apos; &apos;&amp;Contact.MiddleName &amp; &apos; &apos; &amp; Contact.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>