force-app/main/default/objects/Case/fields/Escalate_to_L2__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_L2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate to L2</label>
    <type>Checkbox</type>
</CustomField>