force-app/main/default/objects/Case/fields/Escalate_to_L3__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_L3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate to L3</label>
    <type>Checkbox</type>
</CustomField>