force-app/main/default/objects/Case/fields/Escalation_TAT_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_TAT_in_Hours__c</fullName>
    <formula>NOW() -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation TAT (in Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>