force-app/main/default/objects/Case/fields/Escalation_to_L2__c.field-meta.xml
<CustomField>
    <fullName>Escalation_to_L2__c</fullName>
    <formula>IF(Case_Ageee__c &gt;= 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation to L2</label>
    <type>Checkbox</type>
</CustomField>