force-app/main/default/objects/Case/fields/FamilyHistory__c.field-meta.xml
<CustomField>
    <fullName>FamilyHistory__c</fullName>
    <label>FamilyHistory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>