force-app/main/default/objects/Case/fields/Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid__c</fullName>
    <formula>Student_Fee__r.Amount_Paid__c</formula>
    <label>Fee Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>