force-app/main/default/objects/Case/fields/Fee_Pending__c.field-meta.xml
<CustomField>
    <fullName>Fee_Pending__c</fullName>
    <formula>Student_Fee__r.Amount_Pending__c</formula>
    <label>Fee Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>