force-app/main/default/objects/Case/fields/Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Fee_Status__c</fullName>
    <formula>IF(Approved_By_Agent__c = true &amp;&amp; Student_Fee__r.Amount_Paid__c &lt;&gt;  Student_Fee__r.Amount__c,&apos;Fee Pending&apos;, 
				 IF(Student_Fee__r.Amount_Paid__c =  Student_Fee__r.Amount__c, &apos;Fee Paid&apos;, &apos; &apos;)
			)</formula>
    <label>Fee Status</label>
    <type>Text</type>
</CustomField>