force-app/main/default/objects/Case/fields/Get_Createdby_User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Get_Createdby_User_Email_Address__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Createdby User Email Address</label>
    <type>Text</type>
</CustomField>