force-app/main/default/objects/Case/fields/Get_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Get_Profile_Name__c</fullName>
    <formula>CreatedBy.Profile_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Profile Name</label>
    <type>Text</type>
</CustomField>