force-app/main/default/objects/Case/fields/Hostel_Block__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Block__c</fullName>
    <label>Hostel Block</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hostel_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>G3</fullName>
            </value>
            <value>
                <fullName>RBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>