force-app/main/default/objects/Case/fields/Hostel_Category__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Category__c</fullName>
    <label>Support Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Vending Machine</fullName>
            </value>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
            <value>
                <fullName>Medical Centre</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Food Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>