force-app/main/default/objects/Case/fields/Hostel_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Sub_Category__c</fullName>
    <label>Hostel Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hostel_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Issue</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Medical Centre</fullName>
            </value>
            <value>
                <fullName>Mess</fullName>
            </value>
            <value>
                <fullName>Network Speed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Password Issue</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Room Cleaning</fullName>
            </value>
            <value>
                <fullName>QR Code Issue</fullName>
            </value>
            <value>
                <fullName>Vending Machine</fullName>
            </value>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
            <value>
                <fullName>Wifi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>