force-app/main/default/objects/Case/fields/Hostel_Support_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Support_Attachment__c</fullName>
    <label>Hostel Support Attachment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>