force-app/main/default/objects/Case/fields/INFRA_Attachment__c.field-meta.xml
<CustomField>
    <fullName>INFRA_Attachment__c</fullName>
    <label>INFRA Attachment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>