force-app/main/default/objects/Case/fields/knowlarity_cti__Call_id__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Call_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Call id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>