force-app/main/default/objects/Case/fields/knowlarity_cti__Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Complaint_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>