force-app/main/default/objects/Case/fields/Mentor_Designation__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Designation__c</fullName>
    <formula>Mentor__r.Designation__c</formula>
    <label>Mentor Designation</label>
    <type>Text</type>
</CustomField>