force-app/main/default/objects/Case/fields/Mentor_Email__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Email__c</fullName>
    <formula>Mentor__r.hed__WorkEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mentor Email</label>
    <type>Text</type>
</CustomField>