force-app/main/default/objects/Case/fields/Mentor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Mobile__c</fullName>
    <formula>Mentor__r.MobilePhone</formula>
    <label>Mentor Mobile</label>
    <type>Text</type>
</CustomField>