force-app/main/default/objects/Case/fields/Mentor_Name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name__c</fullName>
    <formula>Mentor__r.FirstName &amp; &quot; &quot; &amp; Mentor__r.LastName</formula>
    <label>Mentor Name</label>
    <type>Text</type>
</CustomField>