force-app/main/default/objects/Case/fields/Old_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Case_Number__c</fullName>
    <label>Old Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>