force-app/main/default/objects/Case/fields/PresentingProblem__c.field-meta.xml
<CustomField>
    <fullName>PresentingProblem__c</fullName>
    <label>Presenting Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>