force-app/main/default/objects/Case/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <formula>Contact.Program_Batch__r.Program_Batch_Name__c</formula>
    <label>Program Batch</label>
    <type>Text</type>
</CustomField>