force-app/main/default/objects/Case/fields/Reason_for_C__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_C__c</fullName>
    <label>Reason for Closing Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feeling better/ Able to cope without counselling</fullName>
            </value>
            <value>
                <fullName>Referred to outside services</fullName>
            </value>
            <value>
                <fullName>Graduated from School</fullName>
            </value>
            <value>
                <fullName>No show after 3 follow up reminders</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>