force-app/main/default/objects/Case/fields/REVA_Hostel_Request__c.field-meta.xml
<CustomField>
    <fullName>REVA_Hostel_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Hostel Request</label>
    <referenceTo>Reva_Hostel_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>