force-app/main/default/objects/Case/fields/RH_Support_Request_L1_User__c.field-meta.xml
<CustomField>
    <fullName>RH_Support_Request_L1_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RH Support Request L1 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>