force-app/main/default/objects/Case/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>Mentor__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>