force-app/main/default/objects/Case/fields/Student_Contact_For_Updates__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact_For_Updates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Contact For Updates</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>