force-app/main/default/objects/Case/fields/Student_Fee__c.field-meta.xml
<CustomField>
    <fullName>Student_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Fee</label>
    <referenceTo>Student_Fee__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>