force-app/main/default/objects/Case/fields/Student_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Registration_Number__c</fullName>
    <label>Student Registration Number</label>
    <type>TextArea</type>
</CustomField>