force-app/main/default/objects/Case/fields/Student_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Student_Remarks__c</fullName>
    <label>Student Remarks</label>
    <type>TextArea</type>
</CustomField>