force-app/main/default/objects/Case/fields/Student_Requisition_Master__c.field-meta.xml
<CustomField>
    <fullName>Student_Requisition_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Requisition Master</label>
    <referenceTo>Student_Requisition_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>