force-app/main/default/objects/Case/fields/Student_UserId__c.field-meta.xml
<CustomField>
    <fullName>Student_UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>