force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Payment</fullName>
            </value>
            <value>
                <fullName>Payment Gateway Clarifications</fullName>
            </value>
            <value>
                <fullName>Program Fee</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Bus Fee</fullName>
            </value>
            <value>
                <fullName>Driver Behavior</fullName>
            </value>
            <value>
                <fullName>Driver Contact Number</fullName>
            </value>
            <value>
                <fullName>Duplicate Bus Pass</fullName>
            </value>
            <value>
                <fullName>If miss the REVA Bus, How to come by BMTC buses</fullName>
            </value>
            <value>
                <fullName>Issue of Bus Pass</fullName>
            </value>
            <value>
                <fullName>Pick Up stop changes</fullName>
            </value>
            <value>
                <fullName>Pick Up points and its timings</fullName>
            </value>
            <value>
                <fullName>Route Number</fullName>
            </value>
            <value>
                <fullName>Seat Availability</fullName>
            </value>
            <value>
                <fullName>Courses Related/Curricular</fullName>
            </value>
            <value>
                <fullName>Library Related</fullName>
            </value>
            <value>
                <fullName>Leaves/Medical Leaves</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Internal Assessment Marks</fullName>
            </value>
            <value>
                <fullName>Adress Proof Certicate</fullName>
            </value>
            <value>
                <fullName>Bonafide Certificate</fullName>
            </value>
            <value>
                <fullName>Change of Branch Fee</fullName>
            </value>
            <value>
                <fullName>Course Completion Certificate</fullName>
            </value>
            <value>
                <fullName>Medium of Instruction Certicate</fullName>
            </value>
            <value>
                <fullName>Migration Certificate</fullName>
            </value>
            <value>
                <fullName>Permanent Identity Card</fullName>
            </value>
            <value>
                <fullName>Scholarship Requests</fullName>
            </value>
            <value>
                <fullName>Sponsorships</fullName>
            </value>
            <value>
                <fullName>Student Profile Changes</fullName>
            </value>
            <value>
                <fullName>Study Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>