force-app/main/default/objects/Case/fields/Support_Case_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Support_Case_Complaints__c</fullName>
    <label>Support Case Complaints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Hostel_Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Hostel_General_Complaints</valueSetName>
    </valueSet>
</CustomField>